2011-09-28  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Refactor searching in inspector, add test (fixed non regex search).
        https://bugs.webkit.org/show_bug.cgi?id=68930

        Reviewed by Yury Semikhatsky.

        Search moved out from page agent.
        Fixed search for non regex case which is not yet used.

        Test: http/tests/inspector/search/search-in-resources.html

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * inspector/ContentSearchUtils.cpp: Added.
        (WebCore::ContentSearchUtils::createSearchRegexSource):
        (WebCore::ContentSearchUtils::createSearchRegex):
        (WebCore::ContentSearchUtils::countRegularExpressionMatches):
        * inspector/ContentSearchUtils.h: Added.
        * inspector/InspectorPageAgent.cpp:
        (WebCore::hasTextContent):
        (WebCore::InspectorPageAgent::cachedResourceContent):
        (WebCore::textContentForCachedResource):
        (WebCore::buildObjectForSearchResult):
        (WebCore::InspectorPageAgent::searchInResources):
        * inspector/front-end/utilities.js:
        ():

2011-09-28  Kentaro Hara  <haraken@chromium.org>

        Implement a PopStateEvent constructor for V8
        https://bugs.webkit.org/show_bug.cgi?id=68896

        Reviewed by Adam Barth.

        Test: fast/events/constructors/pop-state-event-constructor.html

        * bindings/v8/custom/V8EventConstructors.cpp: Added a PopStateEvent constructor.
        * dom/PopStateEvent.idl: Added a 'V8CustomConstructor' attribute.

2011-09-28  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Texmap] Allow TextureMapperGL to work without a GraphicsContext
        https://bugs.webkit.org/show_bug.cgi?id=68980

        Reviewed by Andreas Kling.

        Perform a null-check for m_context and initialize that variable.