@@ -1,3 +1,13 @@
+2011-09-27  Pavel Podivilov  <podivilov@chromium.org>
+
+        Web Inspector: live edit cursor always appears at the beginning of the file.
+        https://bugs.webkit.org/show_bug.cgi?id=68900
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/TextViewer.js:
+        (WebInspector.TextEditorMainPanel.prototype._updateSelectionOnStartEditing):
+
 2011-09-28  Vsevolod Vlasov  <vsevik@chromium.org>
 
         Web Inspector: Refactor searching in inspector, add test (fixed non regex search).
